--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
